<resources>
    <string name="app_name">My Book</string>
    <string name="create_my_book">Create my book</string>
    <string name="hungry">You Hungry?</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="create_book">Create Book</string>
    <string name="book_cover">Upload book cover</string>
    <string name="loadFromGallary">Upload from camera roll</string>
</resources>
