<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vaystudios.com.mybook.Activity2">

    <TextView
        android:text="@string/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookTitle"
        android:textSize="14sp"
        android:fontFamily="serif"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint = "Enter book Title"
        android:id="@+id/editText2"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_below="@+id/bookTitle"
        android:layout_centerHorizontal="true"
        android:singleLine="true" />

    <TextView
        android:text="@string/book_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookDescription"
        android:textSize="14sp"
        android:fontFamily="serif"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint = "Enter book Description"
        android:id="@+id/bookDescription_textField"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_below="@+id/bookDescription"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />

    <TextView
        android:text="@string/book_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookCover"
        android:textSize="14sp"
        android:fontFamily="serif"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/bookDescription_textField"
        android:layout_alignLeft="@+id/bookDescription"
        android:layout_alignStart="@+id/bookDescription" />

    <Button
        android:text="@string/create_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:id="@+id/button3"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/loadFromGallary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadFromGallary"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:width="200dp"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imageView3"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/bookCover"
        android:layout_alignEnd="@+id/bookCover" />

</RelativeLayout>
